# ha-warm-welcome

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/workflows/: release.yml  validate.yml
assets/: warm-welcome-card-mock.js
custom_components/vacation_heating/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  heating_model.py  manifest.json  number.py  select.py  sensor.py  switch.py  websocket.py
custom_components/vacation_heating/frontend/: vacation-heating-card.js
custom_components/vacation_heating/translations/: de.json  en.json  es.json  fr.json  nl.json  pt.json
custom_components/warm_welcome/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  heating_model.py  manifest.json  number.py  select.py  sensor.py  switch.py
custom_components/warm_welcome/frontend/: warm-welcome-card.js
custom_components/warm_welcome/translations/: de.json  en.json  es.json  fr.json  nl.json  pt.json
tests/: conftest.py  test_config_entities.py  test_config_flow.py  test_heating_model.py  test_init.py  test_websocket.py
