[project]
name = "ha-warm-welcome"
version = "0.1.28"
description = "Home Assistant custom integration that predicts when to re-heat each room after a vacation"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component",
    # Provides the hass_frontend module so the frontend dependency
    # (bundled Lovelace card) can be set up in tests.
    "home-assistant-frontend",
    "ruff",
]

[tool.uv]
# Not an installable package: the integration ships via HACS from
# custom_components/, only the dev environment is managed here.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
